# winedittest

./: .gitignore  GNUmakefile  README.md  libedit_test.cpp  testedit.cpp  testedit.sln  testedit.vcxproj  testwinedit.cpp  testwinedit.sln  testwinedit.vcxproj  vt_text_format.h
wineditline/: CMakeLists.txt  winlibs.patch
wineditline/src/: CMakeLists.txt  editline.c
